Edit Technologies Used and Known Bugs  from the Readme.md file and debug overflow of sets images on the ready-made sets page

--- a/assets/style.css
+++ b/assets/style.css
@@ -172,6 +172,7 @@ main {
 .step-image-holder {
   width: 80%;
   height: 50vh;
+  max-height: 80vh;
 }
 
 .step-image {
